mobile view main__list width fix + overflow fix

--- a/scss/layout/_main.scss
+++ b/scss/layout/_main.scss
@@ -67,9 +67,9 @@
 			}
 
 			@include small {
-				width:70%;
+				width:75%;
 				height:auto;
-				overflow:hidden;
+				overflow-x:hidden;
 
 			}
 
